--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div class="section">
             <h2>Understanding the Concept of Remote Online Notary</h2>
-            <p>A Remote Online Notary (RON) is a state-authorized notary public who performs notarizations online using secure audio-visual technology. Unlike traditional notary services, which require in-person interactions, remote online notaries allow individuals to complete the process from the comfort of their homes or offices. For individuals in need of a <b><a href="https://maps.app.goo.gl/RrbsmGUJuFB61joE7">Mobile Notary Service</a></b>, this service eliminates the need for travel and accommodates busy schedules.</p>
+            <p>A Remote Online Notary (RON) is a state-authorized notary public who performs notarizations online using secure audio-visual technology. Unlike traditional notary services, which require in-person interactions, remote online notaries allow individuals to complete the process from the comfort of their homes or offices. For individuals in need of a <b><a href="https://robrt-parker1.github.io/vadar-notaries/">Mobile Notary Service</a></b>, this service eliminates the need for travel and accommodates busy schedules.</p>
         </div>
 
         <div class="section">
